# ic-project

./: .gitignore  .terraform.lock.hcl  Cargo.toml  Dockerfile  flake.nix  main.tf  variables.tf
s3-load-test/: values.yaml
s3-load-test/templates/: deployment.yaml
src/: main.rs
