[package]
name = "s3-load-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3"
